# small-test-prj

./: .gitignore  README.md
c/basic/: .basictst.c.swo  .basictst.c.swp  a.out  basictst.c
c/chrome/47patch/: patchTransp.1.cc  patchTransp.2.cc  patchVideoHole.cc
c/chrome/ipc/ipc/: BUILD.gn
c/chrome/ipc/ipc/jni_sample/: ipc_server_lib_jni.cc  ipc_server_lib_jni.h
c/chrome/ipc/ipc/lib/: ipc_client_lib.cc  ipc_client_lib.h  ipc_msg_lib.h  ipc_server_lib.cc  ipc_server_lib.h  lib_ipc.cc  lib_ipc.cc.delay.cc  lib_ipc.h
c/chrome/ipc/ipc/test/: client.cc  ipc_client_test.cc  ipc_server_test.cc  ipc_server_test.h  ipc_singleprocess_sample.cc  ipc_test_messages.h  ipc_unittest.cc  server.cc
c/cmake/cmake/: CMakeLists.txt
c/cppBase/: .main.cpp.swp  a.out  main.cpp
c/cppBase/string/: main.cpp
c/file/: a.out  readline.cpp
c/fork/: a.out  main.c
c/input/: char.c  event.c
c/key-mouse/: '  .key.cpp.swo  a.out  buildcmd  c-key.c  emulateLoopWheel  emulateWheel  key.cpp  keys.c  presskey.py
c/libnotify/: buildcmd  main.c
c/printfCh/: a.out  printch.c
c/so-dependence/: cmds  liba.c  liba.h  libb.c  libb.h  main.c
c/string/: core  data.txt  main.cpp  stringfind.cpp
c/struct/: a.out  main.c
c/templateTst/: a.out  main.c
c/threads/: .threads.c.swp  a.out  cmd  threads.c
c/time/: a.out  main.c  themake
c/tst/: coded_stream.h  tst.c
c/v8/: a.out  tstscope.c
html/: cmds
html/page/: anr.html  base.html  object.html  plugin.html  simplest.html  timer.html  video.html
js/: tstarguments.js
nodejs/: mongotst.js  tsttimer.js
nodejs/html/: demo.js
(+124 files in other folders)
